// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableRow on rendering with highlighted prop should render with required background color 1`] = `
.c0 {
  background-color: #F4F5F7;
}

.c0:hover {
  background-color: #EBECF0;
}

<tr
  className="c0"
/>
`;

exports[`TableRow on rendering without highlighted prop should render without background color 1`] = `
.c0:hover {
  background-color: #FAFBFC;
}

<tr
  className="c0"
/>
`;
